# Prueba-t-cnica---Senior-Data-Engineer

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: base.yaml
config/env/: dev.yaml  main.yaml  qa.yaml
config/tenants/: ec.yaml  gt.yaml  hn.yaml  jm.yaml  pe.yaml  sv.yaml
docs/: demo.md  infra.md  observations.md  onboarding-tenant.md
input/: global_mobility_data_entrega_productos.csv  materials_catalog.csv
mentoring/: bad_code.py  code_review.md  good_code.py
scripts/: bootstrap_windows_hadoop.py  clean_generated.py  download_delta_jars.py
src/saas_pipeline/: __init__.py  bronze.py  cli.py  config.py  gold.py  paths.py  pipeline.py  quality.py  schemas.py  silver.py  spark.py  storage.py  transformations.py
tests/: conftest.py  test_config.py  test_gold.py  test_silver_transforms.py
tests/fixtures/: deliveries.csv  materials_catalog.csv
tests/integration/: test_pipeline_e2e.py
