[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saas-data-platform"
version = "0.1.0"
description = "Multi-tenant medallion pipeline implemented with PySpark and Delta Lake"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "delta-spark==3.2.0",
  "omegaconf==2.3.0",
  "pyspark==3.5.1",
]

[project.scripts]
saas-pipeline = "saas_pipeline.cli:main"

[dependency-groups]
dev = [
  "pytest==8.3.5",
  "pytest-cov==6.1.1",
  "ruff==0.11.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/saas_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"mentoring/bad_code.py" = ["ALL"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]
pythonpath = ["src"]
